--- a/Week 03- Data Preprocessing/Week 03 Tutorial Workings.ipynb
+++ b/Week 03- Data Preprocessing/Week 03 Tutorial Workings.ipynb
@@ -2998,8 +2998,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4f43bb3d-3576-44b9-8090-2decf2859f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "37813e5a-c9a9-47fe-8a11-44f357515a64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\USER\\\\Desktop\\\\Local Repos\\\\CRM-Tutorials\\\\Week 03- Data Preprocessing'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75c0fdd2-6a92-4f23-b895-419c2bc2693a",
    "metadata": {},
    "outputs": [],
    "source": []
